# create_sesion_4

frist_prorject/: README.md  pyproject.toml  report.md
frist_prorject/src/frist_prorject/: New XLSX Worksheet.xlsx  crew.py  main.py  test_yf.py
frist_prorject/src/frist_prorject/api/: api.py
frist_prorject/src/frist_prorject/tools/: custom_tool.py
